--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<!-- Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+<!-- Bootstrap -->
     <link
   rel="stylesheet"
   href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -12,7 +14,7 @@
 />
     <title>Liam Cottrell // Web Developer</title>
   </head>
-  <body>
+  <body style="background-color: #838995;">
     <div id="root"></div>
     <script type="module" src="src/main.jsx"></script>
   </body>
